--- a/wiki/it/Macro_FCCamera.html
+++ b/wiki/it/Macro_FCCamera.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCCamera (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCamera.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCamera (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCCamera (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Uj&#281;cie widoku FC (2% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--low" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; FCCamera (9% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -234,10 +234,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/4aa545c23b323cf6882
 		</li>
 </ul>
 </center>
-<div class="mw-translate-fuzzy">
-<p>Lo stesso risultato pu&ograve; essere ottenuto creando un disegno nell'angolo dato dalla posizione del clic del mouse e uno schizzo.
+<p>Lo stesso risultato pu&ograve; essere ottenuto creando un piano nell'angolo dato dalla posizione del clic del mouse e da uno schizzo.
 </p>
-</div>
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 785px">
@@ -296,31 +294,31 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/4aa545c23b323cf6882
 <ul><li><b>ver 0.2 25/02/2015&nbsp;:</b> correct names files in for compatibility Linux (case sensitive) thanks microelly2</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114133543
+Cached time: 20260114133624
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 335/1000000
+CPU time usage: 0.092 seconds
+Real time usage: 0.124 seconds
+Preprocessor visited node count: 334/1000000
 Post&#8208;expand include size: 9062/2097152 bytes
 Template argument size: 2717/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 14493/5000000 bytes
+Unstrip post&#8208;expand size: 14497/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.851      1 -total
-  5.72%    2.564      1 Template:Macro/it
-  5.05%    2.267      3 Template:Code
-  3.90%    1.747      1 Template:Codeextralink
-  3.44%    1.542     17 Template:KEY
-  3.12%    1.397      4 Template:Clear
+100.00%   54.953      1 -total
+  7.22%    3.966      1 Template:Macro/it
+  6.21%    3.415      3 Template:Code
+  5.94%    3.262     17 Template:KEY
+  5.33%    2.927      1 Template:Codeextralink
+  4.26%    2.339      4 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55888-0!canonical and timestamp 20260114133543 and revision id 1738163. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55888-0!canonical and timestamp 20260114133624 and revision id 1738165. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
