--- a/wiki/it/Macro_Rectellipse.html
+++ b/wiki/it/Macro_Rectellipse.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Rectellipse/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Rectellipse&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Rechteck-Ellipse (50% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Rechteck-Ellipse (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Rectellipse.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Rectellipse (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Rectellipse (50% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Rectellipse (50% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Rectellipse (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="makrodefinicja: Rectellipse (50% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--complete" title="makrodefinicja: Rectellipse (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Rectellipse (38% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -74,11 +74,11 @@ Rectellipse
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Crea una rectellipse parametrica
 </p>
 </div>
@@ -157,28 +157,28 @@ if __name__ == "__main__":
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251022140507
+Cached time: 20260114133826
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.057 seconds
+CPU time usage: 0.031 seconds
+Real time usage: 0.081 seconds
 Preprocessor visited node count: 95/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 2788/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3810/5000000 bytes
+Unstrip post&#8208;expand size: 3828/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.044      1 -total
- 72.32%    3.648      1 Template:Macro/it
- 25.65%    1.294      1 Template:MacroCode
+100.00%   11.625      1 -total
+ 67.62%    7.861      1 Template:Macro/it
+ 31.24%    3.632      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20251022140507 and revision id 1672329. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260114133826 and revision id 1738167. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
