--- a/wiki/it/Macro_Rectellipse.html
+++ b/wiki/it/Macro_Rectellipse.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_Rectellipse.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Rectellipse (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Rectellipse (50% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Rectellipse (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--complete" title="makrodefinicja: Rectellipse (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Rectellipse (38% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -77,12 +77,8 @@ Rectellipse
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Crea una rectellipse parametrica
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rectellipse.png&amp;filetimestamp=20140504124725&amp;.html" class="mw-file-description"><img src="../File/Rectellipse.png" decoding="async" width="379" height="236" class="mw-file-element" data-file-width="379" data-file-height="236"></a></span>
+<p>Crea una rettellisse parametrica
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rectellipse.png&amp;filetimestamp=20140504124725&amp;.html" class="mw-file-description"><img src="../File/Rectellipse.png" decoding="async" width="379" height="236" class="mw-file-element" data-file-width="379" data-file-height="236"></a></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -157,28 +153,28 @@ if __name__ == "__main__":
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114133826
+Cached time: 20260114134049
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.031 seconds
-Real time usage: 0.081 seconds
-Preprocessor visited node count: 95/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.068 seconds
+Preprocessor visited node count: 91/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 2788/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3828/5000000 bytes
+Unstrip post&#8208;expand size: 3829/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.625      1 -total
- 67.62%    7.861      1 Template:Macro/it
- 31.24%    3.632      1 Template:MacroCode
+100.00%    7.050      1 -total
+ 58.65%    4.135      1 Template:Macro/it
+ 39.42%    2.779      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260114133826 and revision id 1738167. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260114134049 and revision id 1738169. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
