--- a/wiki/it/Macro_Rectellipse.html
+++ b/wiki/it/Macro_Rectellipse.html
@@ -81,11 +81,8 @@ Rectellipse
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rectellipse.png&amp;filetimestamp=20140504124725&amp;.html" class="mw-file-description"><img src="../File/Rectellipse.png" decoding="async" width="379" height="236" class="mw-file-element" data-file-width="379" data-file-height="236"></a></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Rectellipse.png&amp;filetimestamp=20190615122939&amp;.html" class="mw-file-description"><img src="../File/Macro_Rectellipse.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Rectellipse.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Rectellipse.png&amp;filetimestamp=20190615122939&amp;.html" class="mw-file-description"><img src="../File/Macro_Rectellipse.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_Rectellipse.FCMacro</b>
 </p>
 <pre>from __future__ import division # allows floating point division from integers
 import FreeCAD, Part, math
@@ -153,13 +150,13 @@ if __name__ == "__main__":
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114134049
+Cached time: 20260114134103
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.068 seconds
-Preprocessor visited node count: 91/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 90/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 2788/2097152 bytes
 Highest expansion depth: 5/100
@@ -169,12 +166,12 @@ Unstrip post&#8208;expand size: 3829/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.050      1 -total
- 58.65%    4.135      1 Template:Macro/it
- 39.42%    2.779      1 Template:MacroCode
+100.00%    7.300      1 -total
+ 58.84%    4.295      1 Template:MacroCode
+ 39.70%    2.898      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260114134049 and revision id 1738169. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260114134103 and revision id 1738171. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
