--- a/wiki/it/Macro_Rectellipse.html
+++ b/wiki/it/Macro_Rectellipse.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_Rectellipse.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Rectellipse (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Rectellipse (50% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Rectellipse (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--complete" title="makrodefinicja: Rectellipse (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Rectellipse.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Rectellipse (38% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -144,34 +144,32 @@ if __name__ == "__main__":
    #feature will be generated after macro execution
    makeRectellipseBlock()</pre>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-<div class="mw-translate-fuzzy">
-<p><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/ParametricObjectCreation/Rectellipse.FCMacro">Ottieni il codice da Github.</a>
+<p><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/ParametricObjectCreation/Rectellipse.FCMacro">Scaricare da qui il codice su GitHub!</a>
 </p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260114134103
+Cached time: 20260114134158
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.057 seconds
-Preprocessor visited node count: 90/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.049 seconds
+Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 2788/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3829/5000000 bytes
+Unstrip post&#8208;expand size: 3833/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.300      1 -total
- 58.84%    4.295      1 Template:MacroCode
- 39.70%    2.898      1 Template:Macro/it
+100.00%    4.530      1 -total
+ 67.37%    3.052      1 Template:Macro/it
+ 30.25%    1.370      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260114134103 and revision id 1738171. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260114134158 and revision id 1738173. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
