--- a/wiki/Arch_Space.html
+++ b/wiki/Arch_Space.html
@@ -1,12 +1,12 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Arch Space</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Arch+Space&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Arch_Space.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Raum (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Arch_Space.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Raum (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="es/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Espacio (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/Arch_Space.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Espace (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Spazio (47% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Arch_Space.html" class="mw-pt-progress mw-pt-progress--complete" title="Architektura: Przestrze&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="es/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Espacio (9% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
+<li><a href="fr/Arch_Space.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Espace (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Spazio (44% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Arch_Space.html" class="mw-pt-progress mw-pt-progress--high" title="Architektura: Przestrze&#324; (97% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Espa&ccedil;o (16% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><a href="ro/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch: Space/Spa&#539;iu (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="ro/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch: Space/Spa&#539;iu (9% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="sv/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Space (3% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="cs/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Architektura Prostor (9% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="ru/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Arch &#1055;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086; (19% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -225,35 +225,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251224061951
+Cached time: 20260114152321
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.155 seconds
-Real time usage: 0.173 seconds
+CPU time usage: 0.141 seconds
+Real time usage: 0.174 seconds
 Preprocessor visited node count: 2298/1000000
 Post&#8208;expand include size: 40237/2097152 bytes
 Template argument size: 12646/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7373/5000000 bytes
+Unstrip post&#8208;expand size: 7356/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.234      1 -total
- 28.22%   11.071     28 Template:Variable
- 24.54%    9.629     18 Template:PropertyData
- 16.63%    6.524      1 Template:BIM_Tools_navi
- 15.61%    6.123      2 Template:Navigation_menu_2
- 13.48%    5.290     10 Template:PropertyView
-  8.06%    3.162      1 Template:GuiCommand
-  6.46%    2.536      1 Template:Userdocnavi
-  5.74%    2.254      4 Template:Code
-  4.85%    1.903     32 Template:Incode
+100.00%   41.922      1 -total
+ 25.72%   10.783     28 Template:Variable
+ 24.19%   10.140     18 Template:PropertyData
+ 14.43%    6.049      1 Template:BIM_Tools_navi
+ 13.24%    5.549      2 Template:Navigation_menu_2
+ 11.69%    4.899     10 Template:PropertyView
+  7.92%    3.320      1 Template:Userdocnavi
+  7.60%    3.186      1 Template:GuiCommand
+  7.50%    3.146      4 Template:Code
+  5.03%    2.107      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11055-0!canonical and timestamp 20251224062017 and revision id 1719723. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11055-0!canonical and timestamp 20260114152321 and revision id 1719723. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
