--- a/wiki/Arch_Window.html
+++ b/wiki/Arch_Window.html
@@ -311,12 +311,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251221100912
+Cached time: 20260114152451
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.214 seconds
-Real time usage: 0.274 seconds
+CPU time usage: 0.164 seconds
+Real time usage: 0.204 seconds
 Preprocessor visited node count: 2162/1000000
 Post&#8208;expand include size: 39096/2097152 bytes
 Template argument size: 12594/2097152 bytes
@@ -327,19 +327,19 @@ Unstrip post&#8208;expand size: 13381/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.429      1 -total
- 17.34%   12.736     22 Template:PropertyData
- 12.68%    9.308     22 Template:Variable
- 10.24%    7.517      1 Template:BIM_Tools_navi
-  8.97%    6.590      2 Template:Navigation_menu_2
-  5.56%    4.083      1 Template:GuiCommand
-  5.17%    3.794      1 Template:Userdocnavi
-  5.06%    3.713      2 Template:Value
-  4.68%    3.437     39 Template:Incode
-  4.29%    3.150      4 Template:Code
+100.00%   73.464      1 -total
+ 17.67%   12.980     22 Template:PropertyData
+ 13.28%    9.759     22 Template:Variable
+  9.54%    7.012      1 Template:BIM_Tools_navi
+  8.39%    6.166      2 Template:Navigation_menu_2
+  6.47%    4.752      1 Template:GuiCommand
+  5.11%    3.753      2 Template:Value
+  4.22%    3.098      2 Template:Docnav
+  4.07%    2.986     39 Template:Incode
+  3.89%    2.859      4 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1723-0!canonical and timestamp 20251221100912 and revision id 1719156. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1723-0!canonical and timestamp 20260114152451 and revision id 1719156. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
