--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -27,9 +27,7 @@
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <p><span id="Via_Addon_Manager_(recommended)"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h3><span id=".C3.9Cber_den_Addon-Manager_.28Empfohlen.29"></span><span class="mw-headline" id="&Uuml;ber_den_Addon-Manager_(Empfohlen)">&Uuml;ber den Addon-Manager (Empfohlen)</span></h3>
-</div>
+<h3><span id=".C3.9Cber_den_Addon-Manager_.28empfohlen.29"></span><span class="mw-headline" id="&Uuml;ber_den_Addon-Manager_(empfohlen)">&Uuml;ber den Addon-Manager (empfohlen)</span></h3>
 <ol><li>FreeCAD &ouml;ffnen.</li>
 <li>Zum <b>Extras &rarr; Addon-Manager</b> gehen.</li>
 <li>Nach &bdquo;Robust MCP Bridge&ldquo; suchen.</li>
@@ -37,9 +35,7 @@
 <li>FreeCAD neu starten.</li></ol>
 <p><span id="Manual_installation"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h3><span class="mw-headline" id="Manuelle_Installation">Manuelle Installation</span></h3>
-</div>
 <p>Die neueste Version von <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/releases">GitHub-Ver&ouml;ffentlichungen</a> herunterladen und sie in das FreeCAD Mod-Verzeichnis extrahieren:
 </p>
 <ul><li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li>
@@ -211,13 +207,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114151219
+Cached time: 20260114165146
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.066 seconds
-Preprocessor visited node count: 234/1000000
+CPU time usage: 0.055 seconds
+Real time usage: 0.084 seconds
+Preprocessor visited node count: 232/1000000
 Post&#8208;expand include size: 2257/2097152 bytes
 Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
@@ -227,16 +223,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.731      1 -total
- 23.09%    2.708      4 Template:Code
- 14.56%    1.708      5 Template:Incode
- 14.55%    1.707      3 Template:Button
- 14.01%    1.643      1 Template:TOCright
- 12.89%    1.512      4 Template:MenuCommand
- 10.43%    1.224      3 Template:FileName
+100.00%   19.370      1 -total
+ 22.86%    4.427      4 Template:Code
+ 18.84%    3.649      5 Template:Incode
+ 14.33%    2.776      4 Template:MenuCommand
+ 13.38%    2.592      3 Template:Button
+ 12.08%    2.339      3 Template:FileName
+  8.77%    1.699      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114151219 and revision id 1738290. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165145 and revision id 1738318. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
