--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -167,9 +167,7 @@
 <h2><span class="mw-headline" id="Fehlerbehebung">Fehlerbehebung</span></h2>
 <p><span id="Bridge_won't_start"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h3><span id="Br.C3.BCcke_startet_nicht"></span><span class="mw-headline" id="Br&uuml;cke_startet_nicht">Br&uuml;cke startet nicht</span></h3>
-</div>
 <ol><li>Die FreeCAD-Python-Konsole (<b>Ansicht &rarr; Fenster &rarr; Python-Konsole</b>) auf Fehlermeldungen &uuml;berpr&uuml;fen.</li>
 <li>Sicherstellen, dass kein anderer Prozess die Ports 9875/9876 verwendet.</li>
 <li>Versuchen, FreeCAD neu zu starten.</li></ol>
@@ -199,13 +197,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165156
+Cached time: 20260114165200
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.070 seconds
-Preprocessor visited node count: 228/1000000
+CPU time usage: 0.050 seconds
+Real time usage: 0.059 seconds
+Preprocessor visited node count: 227/1000000
 Post&#8208;expand include size: 2257/2097152 bytes
 Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
@@ -215,16 +213,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.690      1 -total
- 25.18%    1.937      4 Template:Code
- 15.87%    1.220      5 Template:Incode
- 12.16%    0.935      1 Template:TOCright
- 11.69%    0.899      3 Template:FileName
- 10.54%    0.810      4 Template:MenuCommand
- 10.15%    0.781      3 Template:Button
+100.00%   10.592      1 -total
+ 24.25%    2.569      4 Template:Code
+ 18.62%    1.972      5 Template:Incode
+ 11.94%    1.264      4 Template:MenuCommand
+ 11.48%    1.216      3 Template:Button
+ 10.29%    1.090      1 Template:TOCright
+  9.90%    1.049      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165156 and revision id 1738326. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165200 and revision id 1738328. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
