--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -7,11 +7,8 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Der <b>Arbeitsbereich Robust MCP Bridge</b> stellt den serverseitigen Verbindungspunkt bereit, der eine Br&uuml;cke (engl. Bridge) zum <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> bildet, wodurch externe Anwendungen FreeCAD &uuml;ber das <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a> steuern k&ouml;nnen. Der Arbeitsbereich l&auml;uft innerhalb von FreeCAD und stellt XML-RPC- und JSON-RPC-Schnittstellen bereit, mit denen externe MCP-Clients eine Verbindung herstellen k&ouml;nnen.
-</p>
-</div>
-<p>Dieser Arbeitsbereich ist f&uuml;r die Verwendung mit dem <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> (verf&uuml;gbar auf PyPI) konzipiert, der es KI-Assistenten wie <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> erm&ouml;glicht, &uuml;ber nat&uuml;rliche Sprache mit FreeCAD zu interagieren. Die vollst&auml;ndige Dokumentation und der Quellcode sind unter <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a> zu finden, wo der MCP-Server, Br&uuml;cke und einige FreeCAD-Makros gefunden werden k&ouml;nnen, die f&uuml;r verschiedene Zwecke verwendet werden, die nicht unbedingt mit KI oder der MCP-Arbeit zusammenh&auml;ngen.
+<p>Der <b>Arbeitsbereich Robust MCP Bridge</b> ist ein serverseitiger Verbindungspunkt, der eine Br&uuml;cke (engl. Bridge) zum <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> bildet, wodurch externe Anwendungen FreeCAD &uuml;ber das <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a> steuern k&ouml;nnen. Der Arbeitsbereich l&auml;uft innerhalb von FreeCAD und stellt XML-RPC- und JSON-RPC-Schnittstellen bereit, mit denen externe MCP-Clients eine Verbindung herstellen k&ouml;nnen.
+</p><p>Dieser Arbeitsbereich ist f&uuml;r die Verwendung mit dem <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> (verf&uuml;gbar auf PyPI) konzipiert, der es KI-Assistenten wie <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> erm&ouml;glicht, &uuml;ber nat&uuml;rliche Sprache mit FreeCAD zu interagieren. Die vollst&auml;ndige Dokumentation und der Quellcode sind unter <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a> zu finden, wo der MCP-Server, Br&uuml;cke und einige FreeCAD-Makros gefunden werden k&ouml;nnen, die f&uuml;r verschiedene Zwecke verwendet werden, die nicht unbedingt mit KI oder der MCP-Arbeit zusammenh&auml;ngen.
 </p><p><b>Wichtigste Merkmale:</b>
 </p>
 <ul><li>Symbolleistensteuerelemente zum Starten/Beenden der MCP-Br&uuml;cke.</li>
@@ -190,13 +187,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165219
+Cached time: 20260114165258
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.058 seconds
-Preprocessor visited node count: 224/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.060 seconds
+Preprocessor visited node count: 223/1000000
 Post&#8208;expand include size: 2257/2097152 bytes
 Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
@@ -206,16 +203,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.155      1 -total
- 21.54%    2.403      4 Template:Code
- 19.89%    2.219      4 Template:MenuCommand
- 14.24%    1.588      3 Template:Button
- 12.27%    1.369      5 Template:Incode
- 11.74%    1.310      1 Template:TOCright
- 10.92%    1.218      3 Template:FileName
+100.00%   12.140      1 -total
+ 25.44%    3.089      4 Template:Code
+ 16.46%    1.998      3 Template:Button
+ 14.66%    1.780      3 Template:FileName
+ 11.92%    1.447      5 Template:Incode
+ 10.77%    1.307      1 Template:TOCright
+  9.84%    1.194      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165219 and revision id 1738334. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165258 and revision id 1738336. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
